tests/e2e/not_allowed/name6.error
Error: syntax error in story at line 1, column 1

1|    a//a = 1
      ^

E0052: Service calls require a command.
